# AoC24

./: .gitignore  Cargo.toml  LICENSE  README.md  newday.sh  template.rs
.github/workflows/: codspeed.yml
benches/: bench_days.rs
src/: day1.rs  day13.rs  day14.rs  day17.rs  day2.rs  day3.rs  day4.rs  day_template.rs  lib.rs  utils.rs
